--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,12 +1,41 @@
-.avatar{
+.avatar {
     width: 50px;
     height: 50px;
     display: flex;
-    img{
+    img {
         width: 100%;
     }
-    h1{
+    h1 {
         padding-top: 5px;
         padding-left: 10px;
+    }
+}
+// index.slim
+.users {
+    list-style: none;
+    padding-left: 0;
+    margin: 0;
+    li {
+        display: flex;
+        overflow: auto;
+        padding: 10px 0;
+        border-bottom: 1px solid #e9e9e9;
+        img {
+            width: 50px;
+            object-fit: contain;
+        }
+        a {
+            font-size: 26px;
+            margin-left: 8px;
+            line-height: 50px;
+            text-decoration: none;
+            color: #333;
+            &:hover {
+                color: #666;
+            }
+        }
+        &:last-child {
+            border: none;
+        }
     }
 }
