--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,10 +1,10 @@
 header (class ="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
   .container
-    = link_to "E-Learning", '#', class:"logo"
+    = link_to "E-Learning",root_path, class:"logo"
     nav (class = "collapse navbar-collapse")
       ul (class ="navbar-nav ml-auto")
-        li.nav-item = link_to "Home" , '#', class: 'nav-link'
-        li.nav-item = link_to "Course" , '#', class: 'nav-link'
+        li.nav-item = link_to "Home" ,root_path, class: 'nav-link'
+        li.nav-item = link_to "Course" ,'#', class: 'nav-link'
         li.nav-item.dropdown
           a.dropdown-toggle.nav-link data-toggle="dropdown" href="#"
             | Word list
