--- a/app/views/lessons/_lesson.slim
+++ b/app/views/lessons/_lesson.slim
@@ -1,4 +1,1 @@
-.card
-  .card-body
-    .card-title = lesson.name
-    = link_to "Learn", '#',class:"btn btn btn-primary"
+= link_to "#{lesson.name}", skill_path(lesson_id: lesson.id),class:"list-group-item list-group-item-action"
