--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -5,7 +5,7 @@ h1.text-center.text-uppercase.mt-5 All users
     - @users.each do |user|
       li
           - if user.image?
-            = image_tag user.image.url
+            / = image_tag user.image.url
           - else 
             = image_tag 'avatar.png', class:'avatar'
           = link_to user.name, user
