--- a/app/views/words/show.slim
+++ b/app/views/words/show.slim
@@ -1,8 +1,8 @@
 .container
   #carouselExampleIndicators.carousel.slide.mt-5 data-ride="carousel" data-wrap="false" data-interval="false"
     .carousel-inner.text-white
-      - @words.each_with_index do |word, index| 
-        .carousel-item.bg-dark.py-5 class="#{index == 0 ? 'active' : ''}"
+      - @lesson.words.each_with_index do |word, index| 
+        .carousel-item.bg-dark.py-5 class="#{index.zero? ? 'active' : ''}"
           .w-100.h-100.text-center
             h1 = word.en_word
             p = word.vi_word
