--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -39,3 +39,11 @@
         }
     }
 }
+
+.pagination{
+    font-size: 20px;
+    justify-content: center;
+    a{
+        padding: 0 8px !important;
+    }
+}
