--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -14,14 +14,18 @@
     list-style: none;
     padding-left: 0;
     margin: 0;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: left;
     li {
+        min-width: 275px;
         display: flex;
-        overflow: auto;
         padding: 10px 0;
-        border-bottom: 1px solid #e9e9e9;
         img {
             width: 50px;
             height: 50px;
+            overflow: auto;
+            border-radius: 50%;
         }
         a {
             font-size: 26px;
