--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -20,6 +20,6 @@ header (class ="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
             div.dropdown-menu.text-center
               = link_to "Profile", current_user, class: 'dropdown-item'
               = link_to "Settings", edit_user_path(current_user) , class: "dropdown-item"
-              = link_to "Log out", logout_path, method:"delete", class: "dropdown-item text-danger"
+              = link_to "Log out", logout_path, method:"delete", class: "dropdown-item"
         - else
           li.nav-item = link_to "Login", login_path, class: 'nav-link'
