update layout show-course

--- a/app/views/courses/_course.slim
+++ b/app/views/courses/_course.slim
@@ -1,4 +1,5 @@
 .course-item
   h2 = course.name
   p = course.description
-  = link_to "Learn level 1",course,class:"btn btn-lg btn-primary"
+  = link_to "View more", course, class:"btn btn-primary"
+  
