--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -9,5 +9,23 @@
 .course-item {
   text-align: center;
   padding: 20px;
-  background: #eee;
+  background: #f1f1f1;
+  border-radius: 2px;
+  position: relative;
+
+  .badge {
+    position: absolute;
+    top: 10px;
+    right: 0;
+    font-size: 14px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+}
+
+.course-sticky {
+  position: sticky;
+  top: calc(60px + 1rem);
+  height: 100%;
+  text-align: center;
 }
