--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,7 +10,8 @@ html
   body
     = render'layouts/header'
     main.main
-      - flash.each do |message_type, message|
-        = content_tag(:div, message,class:"alert alert-#{message_type}")
-      = yield
+      .container
+        - flash.each do |message_type, message|
+          = content_tag(:div, message,class:"alert alert-#{message_type}")
+        = yield
     = render'layouts/footer'
