--- a/app/views/admin/_sidebar.slim
+++ b/app/views/admin/_sidebar.slim
@@ -4,7 +4,7 @@ nav.col-2.bg-light.sidebar
 			li.nav-item
 				= link_to "Dashboard", admin_index_path, class: 'nav-link oi oi-home'
 			li.nav-item
-				= link_to "Users", "#", class: 'nav-link oi oi-person'
+				= link_to "Users", admin_admin_users_path, class: 'nav-link oi oi-person'
 			li.nav-item
 				= link_to "Courses", "#", class: 'nav-link oi oi-book'
 			li.nav-item
