--- a/app/views/admin/_sidebar.slim
+++ b/app/views/admin/_sidebar.slim
@@ -2,12 +2,12 @@ nav.col-2.bg-light.sidebar
 	.sidebar-sticky
 		ul.nav.flex-column
 			li.nav-item
-				= link_to "Dashboard", admin_index_path, class: 'nav-link oi oi-home'
+				= link_to "Dashboard", admin_path, class: 'nav-link oi oi-home'
 			li.nav-item
-				= link_to "Users", admin_admin_users_path, class: 'nav-link oi oi-person'
+				= link_to "Users", admin_users_path, class: 'nav-link oi oi-person'
 			li.nav-item
 				= link_to "Courses", "#", class: 'nav-link oi oi-book'
 			li.nav-item
 				= link_to "Lessons", "#", class: 'nav-link oi oi-book'
-			li.nav-item
-				= link_to "Words", "#", class: 'nav-link oi oi-bold'
+			/ li.nav-item
+			/ 	= link_to "Words", "#", class: 'nav-link oi oi-bold'
