--- a/app/views/admin/_sidebar.slim
+++ b/app/views/admin/_sidebar.slim
@@ -6,8 +6,8 @@ nav.col-2.bg-light.sidebar
 			li.nav-item
 				= link_to "Users", admin_users_path, class: 'nav-link oi oi-person'
 			li.nav-item
-				= link_to "Courses", "#", class: 'nav-link oi oi-book'
+				= link_to "Courses", admin_courses_path, class: 'nav-link oi oi-book'
 			li.nav-item
-				= link_to "Lessons", "#", class: 'nav-link oi oi-book'
+				= link_to "Lessons", admin_lessons_path, class: 'nav-link oi oi-book'
 			li.nav-item
 				= link_to "Words", "#", class: 'nav-link oi oi-bold'
