--- a/app/views/admin/_sidebar.slim
+++ b/app/views/admin/_sidebar.slim
@@ -8,6 +8,6 @@ nav.col-2.bg-light.sidebar
       li.nav-item
         = link_to "Courses", admin_courses_path, class: 'nav-link oi oi-book'
       li.nav-item
-        = link_to "Lessons", "#", class: 'nav-link oi oi-book'
+        = link_to "Lessons", admin_lessons_path, class: 'nav-link oi oi-book'
       li.nav-item
         = link_to "Words", "#", class: 'nav-link oi oi-bold'
