--- a/app/views/admin/users/index.slim
+++ b/app/views/admin/users/index.slim
@@ -8,10 +8,10 @@ table.table
       th scope="col"  Action
   tbody
     - @users.each do |user|
-      - if !user.is_admin
-        tr
-          td = user.id
-          td = user.name
-          td = user.email
-          td = link_to 'delete', admin_user_path(user), :method => :delete, data: {:confirm => "You sure?" },
-                :title => "Delete #{user.name}"
+      tr
+        td = user.id
+        td = user.name
+        td = user.email
+        td = link_to 'Delete', admin_user_path(user), method:"delete", data: {:confirm => "You sure?" },
+              :title => "Delete #{user.name}", class: "btn btn-danger"
+= will_paginate @users
