--- a/app/views/users/index.slim
+++ b/app/views/users/index.slim
@@ -2,7 +2,8 @@
 h1.text-center.text-uppercase.mt-5 All users
 ul.users
   - @users.each do |user|
-    li
-      = image_tag user_image(user)
-      = link_to user.name, user
+    - unless user.is_admin
+      li
+        = image_tag user_image(user)
+        = link_to user.name, user
 = will_paginate @users
