--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -9,9 +9,8 @@ header (class ="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
           a.dropdown-toggle.nav-link data-toggle="dropdown" href="#"
             | Word list
           div.dropdown-menu
-            = link_to "Word course 01", '#', class: 'dropdown-item'
-            = link_to "Word course 02", '#', class: "dropdown-item"
-            = link_to "Word course 03", '#', class: "dropdown-item"
+            - Course.all.each do |course|
+              = link_to "Word #{course.name}", words_course_path(course.id), class: 'dropdown-item'
         - if logged_in?
           li.nav-item = link_to "User", users_path, class: 'nav-link'
           li.nav-item.dropdown
