--- a/app/views/users/_unfollow.slim
+++ b/app/views/users/_unfollow.slim
@@ -1,1 +1,1 @@
-= button_tag "Unfollow", class: "btn btn-secondary btn-unfollow", data: { relationship_id: findRelationshipId(@user.id)} 
+= button_tag "Unfollow", class: "btn btn-secondary btn-unfollow", data: { followed_id: @user.id} 
