update register course

--- a/app/views/courses/_course.slim
+++ b/app/views/courses/_course.slim
@@ -2,4 +2,4 @@
   h2 = course.name
   p = course.description
   = link_to "View more", course, class:"btn btn-primary"
-  .badge.badge-secondary = check_course_learned(course)
+  .badge.badge-secondary = check_course_learned(course) if current_user
