--- a/app/views/courses/show.slim
+++ b/app/views/courses/show.slim
@@ -1,14 +1,16 @@
 .row.my-3
-  .col-md-9
+  .col-md-8.mr-auto.p-2.register-course
     h2 Lesson List
     ul.list-group.mt-3
       - if @course.lessons.present? 
         - @course.lessons.each do |lesson|
-          = link_to "#{lesson.name}", learning_path(lesson_id: lesson.id), class:"list-group-item list-group-item-action #{check_register_course(@course)} lesson-item"
+          = link_to "#{lesson.name}", learning_path(lesson_id: lesson.id), class:"list-group-item list-group-item-action lesson-item #{check_register_course(@course)}"
       - else
-        p.text-center.text-secondary Couldn't find any lessons
-  .col-md-3.course-sticky
+        p.text-center.text-secondary Couldn't find any lessons 
+  .col-md-3.course-sticky.p-2.register-course
     h1 = @course.name
-    p = @course.description
-    = button_tag check_course_learned(@course), class:"btn btn-primary btn-register",data: {course_id: @course.id, user_id: current_user.id} 
-    p.mt-3 Progress: #{current_user.user_lessons.count} / #{@course.lessons.length}
+    h3 Free course
+    = show_button_register_course(@course)
+    p.mt-1 = @course.description
+    p.mt-2 Progress: #{check_progress(@course)}
+    span Study anytime, anywhere
