--- a/app/views/admin/index.slim
+++ b/app/views/admin/index.slim
@@ -4,32 +4,17 @@ h1.text-center.text-uppercase.mt-2 Manage User, Course, Word
   .user.box-item
     h3 User Statistics
     h5 Total User
-    | 50
+    = @user
   .courses.box-item
     h3 Course Statistics
     h5 Total Course
-    | 50
+    = @course
   .lessons.box-item
     h3 Lesson Statistics
     h5 Total Lesson
-    | 50
+    = @lesson
   .words.box-item
     h3 Word Statistics
     h5 Total Word
-    | 50
-  .user.box-item
-    h3 User Statistics
-    h5 Total User
-    | 50
-  .courses.box-item
-    h3 Course Statistics
-    h5 Total Course
-    | 50
-  .lessons.box-item
-    h3 Lesson Statistics
-    h5 Total Lesson
-    | 50
-  .words.box-item
-    h3 Word Statistics
-    h5 Total Word
-    | 50
+    = @word
+  
