--- a/app/views/users/_follow.slim
+++ b/app/views/users/_follow.slim
@@ -1,1 +1,1 @@
-= button_tag "Follow", class: "btn btn-primary btn-follow", data: {followed_id: @user.id} 
+= button_tag "Follow", class: "btn btn-secondary mb-3 btn-follow", data: {followed_id: @user.id} 
