--- a/app/views/users/show.slim
+++ b/app/views/users/show.slim
@@ -21,4 +21,4 @@
           td #{@user.user_courses.count} khóa học
         tr
           td Số từ vựng đã ghi nhớ:
-          td  từ vựng
+          td #{@user.user_words.count} từ vựng
