--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -28,3 +28,25 @@ ul {
 .btn-submit {
   min-width: 100%;
 }
+
+.menu-item {
+  position: relative;
+  min-width: 110px;
+  min-height: 45px;
+  padding: 0 16px;
+  i,
+  a {
+    position: absolute;
+    top: 50%;
+  }
+  i {
+    transform: translateY(-50%);
+  }
+  a {
+    align-self: center;
+    text-decoration: none;
+    color: #333;
+    margin-left: 22px;
+    transform: translateY(-45%);
+  }
+}
