update do practice

--- a/app/assets/stylesheets/common.scss
+++ b/app/assets/stylesheets/common.scss
@@ -1,4 +1,4 @@
-@import "bootstrap";
+@import 'bootstrap';
 *,
 *::before,
 *::after {
@@ -49,4 +49,8 @@ ul {
     margin-left: 22px;
     transform: translateY(-45%);
   }
+}
+
+.mxw-600 {
+  max-width: 600px;
 }
