update ui home page

--- a/app/views/shared/_stats.slim
+++ b/app/views/shared/_stats.slim
@@ -2,9 +2,9 @@
 .stats
   a.mr-3.btn.btn-primary href="#{following_user_path(@user)}" 
     strong#following.stat
-      = @user.following.count
+      = @user.following.size
     |  following
   a.btn.btn-info href="#{followers_user_path(@user)}" 
     strong#followers.stat
-      = @user.followers.count
+      = @user.followers.size
     |  followers
