--- a/app/assets/stylesheets/courses.scss
+++ b/app/assets/stylesheets/courses.scss
@@ -1,30 +1,6 @@
-.course-layout {
-  --columns: 3;
-  --gap: 20px;
-  display: grid;
-  grid-template-columns: repeat(var(--columns), minmax(0, 1fr));
-  grid-gap: var(--gap);
-}
-.course-item {
-  text-align: center;
-  padding: 20px;
-  background: #f1f1f1;
-  border-radius: 2px;
-  position: relative;
-
-  .badge {
-    position: absolute;
-    top: 10px;
-    right: 0;
-    font-size: 14px;
-    border-top-right-radius: 0;
-    border-bottom-right-radius: 0;
-  }
-}
-
 .course-sticky {
   position: sticky;
-  top: calc(60px + 1rem);
+  top: calc(76px + 1rem);
   height: 100%;
   text-align: center;
 }
@@ -95,16 +71,7 @@
     border-color: #777;
   }
 }
-.get-all-learned,
-.get-all-unlearn {
-  display: none;
-}
-.active-get-all {
-  display: grid;
-}
-.unactive-get-all {
-  display: none;
-}
+
 // show course/id
 .lesson-item:hover {
   color: #444;
@@ -112,9 +79,9 @@
   border-color: #777;
 }
 .register-course {
-  border-radius: 8px;
-  box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px,
-    rgba(0, 0, 0, 0.22) 0px 15px 12px;
+  border-radius: 4px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
+
   .Continue {
     pointer-events: none;
     cursor: default;
