--- a/app/views/courses/_course.slim
+++ b/app/views/courses/_course.slim
@@ -1,5 +1,11 @@
-.course-item
-  h2 = course.name
-  p Những từ vững mà ai cũng phải biết khi bắt đầu học TOEIC (#{course.description}) 
-  = link_to "View more", course, class:"btn btn-primary"
-  .badge.badge-secondary = check_course_learned(course) if current_user
+.course__item
+  .course__item-image
+    = image_tag 'online-course.png'
+  .course__item-title #{course.name}
+  .course__item-price Free
+  .course__item-divider
+  .course__item-stats
+    .icon
+      span class="oi oi-media-play"
+    .text #{course.lessons.size} lessons
+  = link_to "#{check_course_learned(course)}", course, class:"course__item-join"
