--- a/app/views/courses/index.slim
+++ b/app/views/courses/index.slim
@@ -1,3 +1,4 @@
-h1.text-center.mt-3 Show courses
-.course-layout.my-3
-  = render @courses
+.container
+  h2.text-center.mt-3 All Courses
+  .course__list.mt-4
+    = render(@courses) || "No Data Available"
