--- a/app/views/layouts/_header.slim
+++ b/app/views/layouts/_header.slim
@@ -1,7 +1,10 @@
-header (class ="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
+header (class ="navbar navbar-expand-md navbar-light fixed-top bg-light")
   .container
-    = link_to "E-Learning", root_path, class:"logo"
-    nav (class = "collapse navbar-collapse")
+    = link_to root_path, class:"navbar-brand" do 
+      = image_tag 'Elearn.svg', width: "200"
+    button.navbar-toggler aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label=("Toggle navigation") data-target="#navbarNavDropdown" data-toggle="collapse" type="button" 
+      span.navbar-toggler-icon
+    nav (class = "collapse navbar-collapse", id="navbarNavDropdown")
       ul (class ="navbar-nav ml-auto")
         li.nav-item = link_to "Home", root_path, class: 'nav-link'
         li.nav-item = link_to "Course", courses_path, class: 'nav-link'
@@ -27,4 +30,4 @@ header (class ="navbar navbar-expand-md navbar-dark fixed-top bg-dark")
                 i.oi.oi-account-login
                 = link_to "Log out", logout_path, method:"delete"
         - else
-          li.nav-item = link_to "Login", login_path, class: 'nav-link'
+          li.nav-item = link_to "Login", login_path, class: 'btn btn-login ml-2'
