--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,12 +10,12 @@ html
   body
     = render'layouts/header'
     main.main
-      .container
-        - flash.each do |message_type, message|
-          = content_tag(:div, class:"alert alert-dismissible alert-#{message_type}") do
+      - flash.each do |message_type, message|
+        .container
+          = content_tag(:div, class:"mt-2 alert alert-dismissible alert-#{message_type}") do
             span #{message}
             button.close aria-label="Close" data-dismiss="alert" type="button" 
               span aria-hidden="true"  ×
-          end
-        = yield
+        end
+      = yield
     = render'layouts/footer'
